--- a/index.html
+++ b/index.html
@@ -2,85 +2,12 @@
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
     #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    body {
-    background-image: linear-gradient(120deg, rgb(209, 219, 233), rgb(240, 250, 243));
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 'Helvetica Neue', Arial, sans-serif;
-    height: 100vh;
-    width: 100vw;
-}
-
-.wrapper {
-    width: 50%;
-    max-width: 600px;
-    margin: 20% auto;
-}
-
-.box {
-    box-shadow: 0px 0px 10px #afc0d9;
-    background-color: #fff;
-    padding: 35px;
-    border-radius: .25rem;
-    text-align: center;
-}
-
-
-h1 {
-    color: rgb(53, 114, 210);
-    font-size: 17px;
-    font-weight: bold;
-    letter-spacing: 6px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-p {
-    margin-top: 10px;
-    margin-bottom: 25px;
-    font-size: 20px;
-    font-weight: 300;
-}
-
-input {
-    border: 1px solid rgb(220, 219, 235);
-    border-radius: 4px;
-    font-size: 13px;
-    padding: 10px;
-    color: #000;
-    transition: all .15s ease-in;
-}
-
-input[type=email] {
-    width: 60%;
-}
-
-input[type=submit] {
-    background-color: rgb(53, 114, 210);
-    color: #fff;
-    font-weight: bold;
-    border: 1px solid transparent;
-}
-
-input[type=submit]::focus {
-    border: 1px solid #fff;
-}
-
-input:focus {
-    border-color: rgb(53, 114, 210);
-    box-shadow: 0px 0px 8px 2px rgba(53, 114, 210, .5);
-    outline: none;
-}
-
-input::placeholder {
-    color: #999;
-}
-
-#subscribe-result p {
-    margin-top: 35px;
-}
+    body{width: 600px;}
+    
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
+<body>
 <div id="mc_embed_signup">
 <form action="https://parkspotly.us4.list-manage.com/subscribe/post?u=bf6aa2b97c3428a5a936d0b0d&amp;id=8b6ad48992" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -100,5 +27,6 @@ input::placeholder {
     </div>
 </form>
 </div>
+</body>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
