--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-    #mc_embed_signup{margin-left: auto; margin-right: auto;background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    body{width: 600px;}
+    #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    body{width: 100vw;}
     html{height: 100vh;}
     
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
