--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
     #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    body{width: 100vw;}
-    html{height: 100vh;}
+
+    html{height: 100vh; width: 100vw;}
     
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
-<body>
+
 <div id="mc_embed_signup">
 <form action="https://parkspotly.us4.list-manage.com/subscribe/post?u=bf6aa2b97c3428a5a936d0b0d&amp;id=8b6ad48992" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -28,6 +28,6 @@
     </div>
 </form>
 </div>
-</body>
+
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
