--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-    #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    #title{color: orange; font-size: 100px;margin-left: auto; margin-right: auto;}
+    #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background: #222222; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    #title{color: orange; font-size: 100px; text-align: center;}
     /* body{background: transparent} */
     html{background: url('https://mocah.org/uploads/posts/5316629-night-dark-car-vehicle-yellow-line-street-road-lights-red-sports-car-rear-light-bike-bicycle-light-streetphotography-field-of-dept-bokeh-photography-free-pictures.jpg'); background-size: cover; height: 100vh; width: 100vw;}
     
