--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style type="text/css">
 @font-face {
   font-family: rebu;
-  src: 'rebu-font.ttf';
+  src: url('rebu-font.ttf');
 }
     #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background: white; clear:left; font:14px Helvetica,Arial,sans-serif; }
     #title{font-family: rebu; color: rgb(224, 71, 25); font-size: 100px; text-align: center;}
