--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!-- Begin Mailchimp Signup Form -->
+<head>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/bf6aa2b97c3428a5a936d0b0d/ba88decc4e1370ce3ea83ef6d.js");</script>
+</head>
 <style type="text/css">
+
 @font-face {
   font-family: rebu;
   src: url('rebu-font.ttf');
