--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!-- Begin Mailchimp Signup Form -->
+<head>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/bf6aa2b97c3428a5a936d0b0d/ba88decc4e1370ce3ea83ef6d.js");</script>
+
 <style type="text/css">
+
 @font-face {
   font-family: rebu;
-  src: url('rebu-font.ttf';
+  src: url('rebu-font.ttf');
 }
     #mc_embed_signup{width: 600px;margin-left: auto; margin-right: auto;background: white; clear:left; font:14px Helvetica,Arial,sans-serif; }
     #title{font-family: rebu; color: rgb(224, 71, 25); font-size: 100px; text-align: center;}
@@ -13,6 +17,7 @@
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
+</head>
 <h1 id="title">Spotly</h1>
 <div id="mc_embed_signup">
 <form action="https://parkspotly.us4.list-manage.com/subscribe/post?u=bf6aa2b97c3428a5a936d0b0d&amp;id=8b6ad48992" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
