--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 			table-layout:fixed !important;
 		}
 		.mcPrivacyBadge{
-			opacity:0.6;
+			opacity:0;
 		}
 		.mcPrivacyBadge:hover{
-			opacity:1;
+			opacity:0;
 		}
 		.mcPrivacyBadge a.privacyLink{
 			text-decoration:none;
 		}
 		.mcPrivacyBadge a.privacyLink:hover{
-			text-decoration:underline;
+			/* text-decoration:underline; */
 		}
 		.mcnTemplatePageBanner{
 			position:absolute;
@@ -583,7 +583,7 @@
 
 }	@media only screen and (max-width: 480px){
 		.mcPrivacyBadge{
-			opacity:1;
+			opacity:0;
 		}
 
 }	@media only screen and (max-width: 480px){
