--- a/index.html
+++ b/index.html
@@ -822,7 +822,8 @@ Subscribe for updates</a></p>
             <div class="mcnTextContent" style="padding: 0px 9px 9px;font-style: normal;font-weight: normal;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 18px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
                 <h1 style="text-align: left;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;box-sizing: border-box !important;border: 1px solid;
 				padding: 10px;
-				box-shadow: 5px 10px 18px #888888;">PARK WITH SPOTLY</h1>
+				box-shadow: 5px 10px 18px #888888;
+				background-color: #2A2A2A;">PARK WITH SPOTLY</h1>
 
             </div>
         </div>
