--- a/index.html
+++ b/index.html
@@ -823,7 +823,8 @@ Subscribe for updates</a></p>
                 <h1 style="text-align: left;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;box-sizing: border-box !important;border: 1px solid;
 				padding: 10px;
 				box-shadow: 5px 10px 18px #888888;
-				background-color: #2A2A2A;">PARK WITH SPOTLY</h1>
+				background-color: #2A2A2A;
+				opacity: 0.5;">PARK WITH SPOTLY</h1>
 
             </div>
         </div>
