--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   gtag('config', 'UA-145831935-2');
 </script>
-<link rel="icon" type="image/x-icon" href="./spotlyicon.png" />
-<link rel="apple-touch-icon" href="./spotlyicon.png">
+<link rel="icon" type="image/x-icon" href="./parkspotly.png" />
+<link rel="apple-touch-icon" href="./parkspotly.png">
 
     <meta charset="UTF-8" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
