--- a/index.html
+++ b/index.html
@@ -693,9 +693,9 @@
         
         <div style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
             <div class="mcnTextContent" style="padding-top: 0;padding-right: 9px;padding-bottom: 9px;padding-left: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
-                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;box-sizing: border-box !important;">By the community, for the community</h1>
+                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;box-sizing: border-box !important; text-shadow: 0 1px black; ">By the community, for the community</h1>
 
-<p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important; text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 2px 0 #000, -2px 0 0 #000;">We give you the power to monetize your parking spot<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+<p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important; text-shadow: 0 1px black; ">We give you the power to monetize your parking spot<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 Subscribe for updates</a></p>
   </div>
@@ -831,7 +831,7 @@ Subscribe for updates</a></p>
         
         <div style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
             <div class="mcnTextContent" style="padding: 0px 9px 9px;font-style: normal;font-weight: normal;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 18px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
-                <h1 style="text-align: left;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;box-sizing: border-box !important;">PARK WITH SPOTLY</h1>
+                <h1 style="text-align: left;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;box-sizing: border-box !important; text-shadow: 0 1px black; ">PARK WITH SPOTLY</h1>
 
             </div>
         </div>
