--- a/index.html
+++ b/index.html
@@ -695,21 +695,24 @@ Subscribe for updates</a></p>
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:transparent; color: white; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	#mc_embed_signup{padding-left: 20px;
+    padding-right: 20px; background:transparent; color: white; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
 <form action="https://parkspotly.us4.list-manage.com/subscribe/post?u=bf6aa2b97c3428a5a936d0b0d&amp;id=8b6ad48992" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div style="padding-left: 25px; display: flex; flex-wrap: wrap; justify-content: center;" id="mc_embed_signup_scroll">
+    <div style="display: flex; flex-wrap: wrap; justify-content: center;" id="mc_embed_signup_scroll">
 	<label for="mce-EMAIL"></label>
 	<input style="height: 40px;
+	margin-top: 10px;
 	width: 400px;
 	font-size: 25px;" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bf6aa2b97c3428a5a936d0b0d_8b6ad48992" tabindex="-1" value=""></div>
     <div class="clear"><input style="background:linear-gradient(to bottom, #ffd15c 5%, #fc6d00 100%);
 		background-color:#ffd15c;
+		margin-top: 10px;
 		border-radius:5px;
 		border:1px solid #ffa200;
 		display:inline-block;
