updates to design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Spotly</title>
     <link rel="icon" href="./ItunesArtwork@2x.png">
 <style type="text/css" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-		html,body{
+		html,body{ 
 			height:100%;
 		}
 		p{
@@ -195,7 +195,7 @@
 		}
 		.templateHeader{
 			background-color:transparent;
-			background-image:url("https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/782a6b1b-1990-42cc-8dce-111aace43b4e.jpg");
+			background-image:url("https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/258b76ab-9103-422d-ba9a-a01df798b077.jpg");
 			background-repeat:no-repeat;
 			background-position:center;
 			background-size:cover;
@@ -661,7 +661,7 @@
 }</style><!--[if !mso]><!--><link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i" rel="stylesheet"><!--<![endif]--><link rel="stylesheet" type="text/css" href="https://eep.io/mc-release/1.1.1867dead22d6127379552e0d904a5b1a8eef908f4/css/signup-forms/pages/common.css"></head>
 <body style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;width: 100%;position: relative;min-height: 100vh;box-sizing: border-box !important;margin: 0 !important;padding: 0 !important;">
 <div class="wrapper" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;display: flex;flex-direction: column;box-sizing: border-box !important;">
-    <div mc:template_section="Header" class="templateSection templateHeader" data-template-container="" style="background:transparent url(&quot;https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/782a6b1b-1990-42cc-8dce-111aace43b4e.jpg&quot;) no-repeat center/cover;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;position: relative;display: flex;flex-shrink: 0;justify-content: center;padding-right: 0px;padding-left: 0px;background-color: transparent;background-image: url(https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/782a6b1b-1990-42cc-8dce-111aace43b4e.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;border-top: 0;border-bottom: 0;padding-top: 27px;padding-bottom: 270px;box-sizing: border-box !important;">
+    <div mc:template_section="Header" class="templateSection templateHeader" data-template-container="" style="background:transparent url(&quot;https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/258b76ab-9103-422d-ba9a-a01df798b077.jpg&quot;) no-repeat center/cover;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;position: relative;display: flex;flex-shrink: 0;justify-content: center;padding-right: 0px;padding-left: 0px;background-color: transparent;background-image: url(https://eep.io/mc-gallery/bf6aa2b97c3428a5a936d0b0d/_compresseds/258b76ab-9103-422d-ba9a-a01df798b077.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;border-top: 0;border-bottom: 0;padding-top: 27px;padding-bottom: 270px;box-sizing: border-box !important;">
         <div class="headerContainer contentContainer" style="background:transparent none no-repeat center/cover;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;max-width: 960px;width: 100%;flex: 0 0 auto;background-color: transparent;background-image: none;background-repeat: no-repeat;background-position: center;background-size: cover;border-top: 0;border-bottom: 0;padding-top: 0;padding-bottom: 0;box-sizing: border-box !important;"><div width="100%" class="mcnTextBlock" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <div class="mcnTextBlockInner" style="display: flex;padding: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
         
@@ -682,9 +682,9 @@
         
         <div style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
             <div class="mcnTextContent" style="padding-top: 0;padding-right: 9px;padding-bottom: 9px;padding-left: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
-                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;box-sizing: border-box !important;">By the community, for the community</h1>
+                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: center;box-sizing: border-box !important;">A bridge to a better tomorrow</h1>
 
-<p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important;">We give you the power to monetize your parking spot<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+<p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: center;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important;">We give you the power to monetize your parking spot<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 Subscribe for updates</a></p>
 
@@ -734,7 +734,7 @@ Subscribe for updates</a></p>
 
 <div class="mcnSignUpBlockContentContainer" style="display: flex;justify-content: flex-start;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <div class="mcnSignUpFormContentContainer" style="align-items: center;justify-content: center;padding-top: 18px;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-        <div class="mcnTextContent" data-dojo-attach-point="formContentContainer" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
+        <div class="mcnTextContent" data-dojo-attach-point="formContentContainer" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: center;box-sizing: border-box !important;">
             <!-- Form Fields -->
             <div class="content__formFields" data-dojo-attach-point="formFieldsContainer" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <span style="font-family: Raleway;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
