updates to text

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         
         <div style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
             <div class="mcnTextContent" style="padding-top: 0;padding-right: 9px;padding-bottom: 9px;padding-left: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
-                <div style="text-align: center;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;"><span style="font-size: 58px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important; letter-spacing: 10px;">Spotly</span></div>
+                <div style="text-align: center;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;"><span style="color: #FFFFFF; font-size: 58px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important; letter-spacing: 10px;">Spotly</span></div>
 
             </div>
         </div>
@@ -682,7 +682,8 @@
         
         <div style="width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
             <div class="mcnTextContent" style="padding-top: 0;padding-right: 9px;padding-bottom: 9px;padding-left: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;word-break: break-word;flex-flow: column;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: left;box-sizing: border-box !important;">
-                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: center;box-sizing: border-box !important;">A bridge to a better tomorrow</h1>
+                <h1 style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;margin: 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 72px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: center;box-sizing: border-box !important; letter-spacing: 5px;">A bridge to a better tomorrow</h1>
+				<p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 25px;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: center;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important;">By the community, for the community.<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 
 <p style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;margin: 10px 0;padding: 0;color: #FFFFFF;font-family: Raleway;font-size: 24px;line-height: 150%;text-align: center;box-sizing: border-box !important;"><a id="header" name="header" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;color: #FFFFFF;font-weight: normal;text-decoration: none;box-sizing: border-box !important;">We give you the power to monetize your parking spot<br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 <br style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
