--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Spotly</title>
 	<link rel="icon" href="./ItunesArtwork@2x.png">
 	
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145831935-2"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145831935-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -14,7 +15,6 @@
 
   gtag('config', 'UA-145831935-2');
 </script>
-
 
 <style type="text/css" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 		html,body{ 
