--- a/index.html
+++ b/index.html
@@ -791,14 +791,14 @@ Subscribe for updates</a></p>
         
 	</div>
 	
-
+<!-- 
 	<div style="text-align: center; width: 100%; height: 100%; background-color: #FAFAFA;">
 		<video width="100%" style="padding: 5%;" controls>
 			<source src="./video.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		  </video> 
 	
-		</div>
+		</div> -->
 </div><div class="mcnDividerBlock" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;table-layout: fixed !important;">
     <div class="mcnDividerBlockInner" style="padding: 144px 18px 0px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
         <div class="mcnDividerContent" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;"></div>
