--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="fix-4-12">
           <!--    <svg class="ae-1 fix-3-12 margin-bottom-3" style="height: 76px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>-->
               <h1 style="font-size: 83px; padding: 20px">Spotly</h1>
-              <a href="#" class="button hollow ae-2 cropLeft"><img src="https://designmodo.com/slides/app/assets/img/appstore.jpg" height="63"/></a><a href="#" class="button hollow ae-3 cropRight"><img src="assets/img/googleplay.jpg" height="63"/></a>
+              <a href="#" class="button hollow ae-2 cropLeft"><img src="/assets/img/appstore.jpg" height="63"/></a><a href="#" class="button hollow ae-3 cropRight"><img src="assets/img/googleplay.jpg" height="63"/></a>
             </div>
           </li>
           <li class="col-12-12">
@@ -167,7 +167,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(https://designmodo.com/slides/app/assets/uploads/omurden-cengiz-cf3bkbdyos8-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(/slides/app/assets/uploads/omurden-cengiz-cf3bkbdyos8-unsplash.jpg?p=PZk79Qrj)"></div>
 </section>
 <!-- Slide 2 (#04) -->
 <section class="slide fade-6 kenBurns">
@@ -180,14 +180,14 @@
             <h1 style="font-size:35px; padding:20px;">Spotly</h1>
           </div>
           <div class="videoThumbnail shadow rounded ae-4 fromCenter popupTrigger" data-popup-id="4">
-            <img src="https://designmodo.com/slides/app/assets/uploads/back.jpg?p=PZk79Qrj" alt="Video Thumbnail"/>
+            <img src="/slides/app/assets/uploads/back.jpg?p=PZk79Qrj" alt="Video Thumbnail"/>
           </div>
         </div>
 
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(https://designmodo.com/slides/app/assets/uploads/tomas-nozina-cbskhfu6uue-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(/slides/app/assets/uploads/tomas-nozina-cbskhfu6uue-unsplash.jpg?p=PZk79Qrj)"></div>
 </section>
 
 <!-- Popup Video -->
@@ -198,7 +198,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent shadow rounded">
-            <video controls src="https://designmodo.com/slides/app/assets/uploads/advid.mp4?p=PZk79Qrj"></video>
+            <video controls src="/slides/app/assets/uploads/advid.mp4?p=PZk79Qrj"></video>
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(https://designmodo.com/slides/app/assets/uploads/nicholas-mazzaccaro-bt5pmnpda9y-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(/slides/app/assets/uploads/nicholas-mazzaccaro-bt5pmnpda9y-unsplash.jpg?p=PZk79Qrj)"></div>
 </section>
 <!-- Slide 3 (#08) -->
 <section class="slide fade-6 kenBurns">
@@ -279,7 +279,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(https://designmodo.com/slides/app/assets/uploads/vita-marija-murenaite-44eohicreko-unsplash-2.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(/slides/app/assets/uploads/vita-marija-murenaite-44eohicreko-unsplash-2.jpg?p=PZk79Qrj)"></div>
 </section>
 <!-- Panel Bottom #01 -->
 <nav class="panel bottom forceMobileView">
