--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Untitled" />
     <meta name="twitter:title" content="Untitled" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <base href="https://designmodo.com/slides/app/">
     <!-- Compressed Styles -->
     <link href="css/slides.min.css?508341" rel="stylesheet" type="text/css">
      <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Spotly</title>
