--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </li>
           <li class="col-12-12">
             <div class="fix-6-12 ae-2 margin-top-3">
-              <img class="iphone-5" width="380" src="./ff.png" alt="iPhone App" data-action="zoom"/>
+              <img class="iphone-5" width="380" src="../ff.png" alt="iPhone App" data-action="zoom"/>
             </div>
           </li>
         </ul>
