--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(/slides/app/assets/uploads/omurden-cengiz-cf3bkbdyos8-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/background1.jpg?raw=true)"></div>
 </section>
 <!-- Slide 2 (#04) -->
 <section class="slide fade-6 kenBurns">
