--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </li>
           <li class="col-12-12">
             <div class="fix-6-12 ae-2 margin-top-3">
-              <img class="iphone-5" width="380" src="../ff.png" alt="iPhone App" data-action="zoom"/>
+              <img class="iphone-5" width="380" src="https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/ip.png?raw=true" alt="iPhone App" data-action="zoom"/>
             </div>
           </li>
         </ul>
@@ -188,7 +188,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(/slides/app/assets/uploads/tomas-nozina-cbskhfu6uue-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/background4.jpg?raw=true)"></div>
 </section>
 
 <!-- Popup Video -->
@@ -199,7 +199,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent shadow rounded">
-            <video controls src="/slides/app/assets/uploads/advid.mp4?p=PZk79Qrj"></video>
+            <video controls src="https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/back.jpg?raw=true"></video>
           </div>
         </div>
       </div>
@@ -226,7 +226,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(/slides/app/assets/uploads/nicholas-mazzaccaro-bt5pmnpda9y-unsplash.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/background3.jpg?raw=true)"></div>
 </section>
 <!-- Slide 3 (#08) -->
 <section class="slide fade-6 kenBurns">
@@ -280,7 +280,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(/slides/app/assets/uploads/vita-marija-murenaite-44eohicreko-unsplash-2.jpg?p=PZk79Qrj)"></div>
+  <div class="background" style="background-image:url(https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/background2.jpg?raw=true)"></div>
 </section>
 <!-- Panel Bottom #01 -->
 <nav class="panel bottom forceMobileView">
