--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <base href="https://designmodo.com/slides/app/">
     <!-- Compressed Styles -->
     <link href="css/slides.min.css?508341" rel="stylesheet" type="text/css">
-     <title style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">Spotly</title>
+     <title>Spotly</title>
 
     
     <!-- Fonts and Material Icons -->
