--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="fix-4-12">
           <!--    <svg class="ae-1 fix-3-12 margin-bottom-3" style="height: 76px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>-->
               <h1 style="font-size: 83px; padding: 20px">Spotly</h1>
-              <a href="#" class="button hollow ae-2 cropLeft"><img src="https://designmodo.com/assets/img/appstore.jpg" height="63"/></a><a href="#" class="button hollow ae-3 cropRight"><img src="assets/img/googleplay.jpg" height="63"/></a>
+              <a href="#" class="button hollow ae-2 cropLeft"><img src="assets/img/appstore.jpg" height="63"/></a><a href="#" class="button hollow ae-3 cropRight"><img src="assets/img/googleplay.jpg" height="63"/></a>
             </div>
           </li>
           <li class="col-12-12">
