--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent shadow rounded">
-            <video controls src="https://github.com/KoreyMitchell/SpotlySubscribe/blob/master/back.jpg?raw=true"></video>
+           <iframe src="https://drive.google.com/file/d/1RNVX9z95dlcLnOg0mLFn8b0dGMJ4N4d1/preview" width="640" height="480"></iframe>
           </div>
         </div>
       </div>
