--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="navigation default">
     <ul></ul>
   </div>
-</nav>
+</nav> -->
 <nav class="panel top">
   <div class="sections desktop">
     <div class="left"><a href="#" title="Slides Framework">
@@ -101,11 +101,13 @@
       </a></div>
     <div class="right">
       <ul class="menu trim">
-        <li><a href="#">Tour</a></li>
+        <!-- <li><a href="#">Tour</a></li>
         <li><a href="#">Upgrade</a></li>
         <li><a href="#">Help</a></li>
-        <li><a href="#">Explore</a></li>
+        <li><a href="#">Explore</a></li> -->
         <li class="cropRight"><a class="trimRight shift-up-2" href="http://facebook.com/parkspotly" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
+        <li class="cropRight"><a class="trimRight shift-up-2" href="http://instagram.com/parkspotly" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
+        
       </ul>
     </div>
   </div>
@@ -114,7 +116,7 @@
     </a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
-</nav> -->
+</nav>
 
 <!-- Sidebar -->
 <nav class="sidebar" data-sidebar-id="1">
@@ -302,7 +304,7 @@
     <a href="#">Contact us</a>
   </div>
   <ul>
-    <li class="social-facebook"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#fb-like"></use></svg></li>
+    <li href="www.google.com" class="social-facebook"></li>
     <li class="social-twitter"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></li>
     <li class="social-pinterest"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></li>
     <li class="social-linkedin"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></li>
