--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent shadow rounded">
-           <iframe src="https://drive.google.com/file/d/1RNVX9z95dlcLnOg0mLFn8b0dGMJ4N4d1/preview" width="640" height="480"></iframe>
+           <video controls src="//cdn-b-east.streamable.com/video/mp4/17zkeb.mp4?token=5hBfsDwzfdFv7zroxZvqwA&expires=1589963040" width="640" height="480"></video>
           </div>
         </div>
       </div>
