--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta property="og:title" content="Untitled" />
     <meta name="twitter:title" content="Untitled" />
+    <link rel="shortcut icon" href="http://www.iconj.com/ico/k/0/k0g9p0fy85.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
         <base href="https://designmodo.com/slides/app/">
     <!-- Compressed Styles -->
