--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent shadow rounded">
-           <video controls src="//cdn-b-east.streamable.com/video/mp4/17zkeb.mp4?token=5hBfsDwzfdFv7zroxZvqwA&expires=1589963040" width="640" height="480"></video>
+            <iframe src="https://player.vimeo.com/video/420862684?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
         </div>
       </div>
