--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta property="og:title" content="Untitled" />
-    <meta name="twitter:title" content="Untitled" />
+    <meta property="og:title" content="Spotly" />
+    <meta name="twitter:title" content="Spotly" />
     <link rel="shortcut icon" href="http://www.iconj.com/ico/k/0/k0g9p0fy85.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
         <base href="https://designmodo.com/slides/app/">
