--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <meta property="og:image" content="https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg">
-<meta property="og:image:type" content="image/jpg">
+
+  <meta property='og:title' content='Park Smartly, Park Spotly'/>
+  <meta property='og:image' content='//https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg'/>
+  <meta property='og:description' content='Contactless parking has never been so easy'/>
+  <meta property='og:url' content='//www.parkspotly.com' />
+
+
+ 
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="1024">
     <meta charset="UTF-8">
