--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 
   <meta property='og:title' content='Park Smartly, Park Spotly'/>
-  <meta property='og:image' content='//https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg'/>
+  <meta property='og:image' content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg'/>
   <meta property='og:description' content='Contactless parking has never been so easy'/>
-  <meta property='og:url' content='//www.parkspotly.com' />
+  <meta property='og:url' content='www.parkspotly.com' />
 
 
  
