--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 
-  <meta property='og:title' content='Park Smartly, Park Spotly'/>
-  <meta property='og:image' content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg'/>
-  <meta property='og:description' content='Contactless parking has never been so easy'/>
-  <meta property='og:url' content='www.parkspotly.com' />
+  <meta prefix="og: http://ogp.me/ns#" property='og:title' content='Park Smartly, Park Spotly' />
+<meta prefix="og: http://ogp.me/ns#" property='og:image' content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg' />
+<meta prefix="og: http://ogp.me/ns#" property='og:description' content='Contactless parking has never been so easy' />
+<meta prefix="og: http://ogp.me/ns#"  property='og:url' content='www.parkspotly.com' />
 
 
  
