--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <meta prefix="og: http://ogp.me/ns#" property='og:description' content='Contactless parking has never been so easy' />
 <meta prefix="og: http://ogp.me/ns#"  property='og:url' content='www.parkspotly.com' />
 
+  <meta property='og:title' content='Park Smartly, Park Spotly'/>
+  <meta property='og:image' content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.jpg'/>
+  <meta property='og:description' content='Contactless parking has never been so easy'/>
+  <meta property='og:url' content='www.parkspotly.com' />
+
 
  
 <meta property="og:image:width" content="1024">
