--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+
+  <!-- Facebook -->
   <meta property='og:title' content='Park Smartly, Park Spotly' />
   <meta property="og:image:width" content="1920" />
   <meta property="og:image:height" content="1080" />
@@ -9,13 +11,14 @@
   <meta property='og:image' content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.png' />
   <meta property='og:description' content='Contactless parking has never been so easy' />
   <meta property='og:url' content='https://www.parkspotly.com' />
-  //LinkedIn
+ 
+  <!-- LinkedIn -->
   <meta prefix="og: http://ogp.me/ns#" property='og:title' content='Park Smartly, Park Spotly' />
   <meta prefix="og: http://ogp.me/ns#" property='og:image'
     content='https://raw.githubusercontent.com/KoreyMitchell/SpotlySubscribe/master/back.png' />
   <meta prefix="og: http://ogp.me/ns#" property='og:description' content='Contactless parking has never been so easy' />
   <meta prefix="og: http://ogp.me/ns#" property='og:url' content='https://www.parkspotly.com' />
-  //Facebook
+  
 
 
 
