--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-
+  <meta property="og:site_name" content="Spotly" />
   <!-- Facebook -->
   <meta property='og:title' content='Park Smartly, Park Spotly' />
   <meta property="og:image:width" content="1920" />
@@ -489,9 +489,9 @@
   <div class="dropdown share bottom right" data-dropdown-id="2" >
   <div class="center padding-2">
     <div class="title">Share</div>
-    <a href="#">Contact us</a>
+    <a href="#">Where to?</a>
   </div>
-  <div data-url="Your new online marketplace for contactless parking. Easily rent out your parking spot, or rent from others. Make your parking spot work for you today. Park Smartly, Park Spotly. https://www.parkspotly.com" data-title="Check this out" class="sharethis-inline-share-buttons"></div>
+  <div style="margin-bottom: 5px;" data-url="parkspotly.com" data-description="Your new online marketplace for contactless parking. Easily rent out your parking spot, or rent from others. Make your parking spot work for you today. Park Smartly, Park Spotly. https://www.parkspotly.com" data-title="Check this out" class="sharethis-inline-share-buttons"></div>
   <!-- <ul>
     <li><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.parkspotly.com%2F&amp;src=sdkpreparse target="_blank"> Facebook</a></li>
     <li class="social-twitter"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></li>
